# goose

./: .dockerignore  .gitignore  .goosehints  404.html  ACCEPTABLE_USAGE.md  AGENTS.md  BUILDING_DOCKER.md  BUILDING_LINUX.md  CONTRIBUTING.md  CONTRIBUTING_RECIPES.md  Cargo.toml  Dockerfile  JOKES.md  Justfile  README.md  RELEASE.md  ai-assisted-coding-guide.md  demo.json  demo.txt  download_cli.ps1  download_cli.sh  flake.nix  goose-gui.sh  index.html  recipe-inline-python.yaml  sitemap.xml  test_acp_client.py
.github/: CODEOWNERS  pull_request_template.md
.husky/: pre-commit
blog/: atom.xml  index.html  rss.xml
clippy-baselines/: cognitive_complexity.txt  too_many_lines.txt
community/: index.html
crates/goose-mcp/: Cargo.toml
crates/goose-mcp/src/: lib.rs  mcp_server_runner.rs
crates/goose-mcp/src/autovisualiser/: mod.rs
crates/goose-mcp/src/computercontroller/: docx_tool.rs  mod.rs  pdf_tool.rs  xlsx_tool.rs
crates/goose-mcp/src/computercontroller/platform/: mod.rs  windows.rs
crates/goose-mcp/src/developer/: mod.rs  rmcp_developer.rs  shell.rs  text_editor.rs
crates/goose-mcp/src/developer/analyze/: cache.rs  formatter.rs  graph.rs  mod.rs  parser.rs  traversal.rs  types.rs
crates/goose-mcp/src/developer/analyze/languages/: go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  swift.rs
crates/goose-mcp/src/developer/analyze/tests/: cache_tests.rs  fixtures.rs  formatter_tests.rs  graph_tests.rs  integration_tests.rs  large_output_tests.rs  mod.rs  parser_tests.rs  traversal_tests.rs
crates/goose-mcp/src/developer/editor_models/: EDITOR_API_EXAMPLE.md  mod.rs  morphllm_editor.rs  openai_compatible_editor.rs  relace_editor.rs
crates/goose-mcp/src/developer/goose_hints/: load_hints.rs  mod.rs
crates/goose-mcp/src/developer/tests/: test_diff.rs
crates/goose-mcp/src/google_drive/: mod.rs
crates/goose-mcp/src/memory/: mod.rs
crates/goose-mcp/src/tutorial/: mod.rs
crates/goose-mcp/src/tutorial/tutorials/: build-mcp-extension.md
deeplink-generator/: index.html
documentation/: README.md  docusaurus.config.ts  package-lock.json
extension/: index.html
extensions/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
recipe-generator/: index.html
recipe-scanner/: base_recipe.yaml  scan-recipe.sh
recipes/: index.html
scripts/: clippy-baseline.sh  (+1 more)
(+1183 files in other folders)
